# PlanetRenderer

./: .clang-format  .gitignore  AllowedDescriptorInfos.hpp  Buffers.cpp  Buffers.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CameraBase.cpp  CameraBase.hpp  CbtGpuBisection.cpp  CbtGpuBisection.hpp  CompileShaders.sh  Context.cpp  Context.hpp  DescriptorBuilder.hpp  DescriptorPool.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp  Device.cpp  Device.hpp  DeviceFeatureContainer.hpp  FastPrint.hpp  FreeFlyCam.cpp  FreeFlyCam.hpp  GetVkFunc.hpp  GpuMemAlloc.cpp  GpuMemAlloc.hpp  Ideen.txt  Images.cpp  Images.hpp  InitializerList.hpp  Libs.hpp  Makefile  MesaProfileCapture.sh  MeshGen.cpp  MeshGen.hpp  Noise.cpp  Noise.hpp  PlanetRenderer.cpp  (+20 more)
Depricated/: CbtBisection.cpp  CbtBisection.hpp
Shaders/: PlanetCommon.glsl  PlanetShader.comp  PlanetShader.frag  PlanetShader.vert  PlanetVertex.glsl.hpp
Shaders/Cbt/: Bisector.glsl.hpp  CachePointers.comp  CacheVertices.comp  Classify.comp  Displacement.glsl  FillNewBlocks.comp  GenerateCmds.comp  Generic.glsl.hpp  GetCbtBitHelper.glsl  Halfedge.glsl.hpp  IndirectDispatch.comp  IndirectDispatchVertex.comp  PlanetDisplacement.comp  PlanetDisplacementParent.comp  PlanetDisplacementVertex.comp  ReserveBlocks.comp  ResetCommands.comp  SumReduction.comp  UpdateBitfield.comp  UpdateNeighbours.comp  ValidateCmds.comp
Shaders/Compiled/: CachePointers.comp.spv  CacheVertices.comp.spv  Classify.comp.spv  FillNewBlocks.comp.spv  GenerateCmds.comp.spv  IndirectDispatch.comp.spv  IndirectDispatchVertex.comp.spv  PlanetDisplacement.comp.spv  PlanetShader.comp.spv  PlanetShader.frag.spv  PlanetShader.vert.spv  ReserveBlocks.comp.spv  ResetCommands.comp.spv  SumReduction.comp.spv  UpdateBitfield.comp.spv  UpdateNeighbours.comp.spv  ValidateCmds.comp.spv
Shaders/Compiled/Cbt/: CachePointers.comp.spv  CacheVertices.comp.spv  Classify.comp.spv  FillNewBlocks.comp.spv  GenerateCmds.comp.spv  IndirectDispatch.comp.spv  IndirectDispatchVertex.comp.spv  PlanetDisplacement.comp.spv  ReserveBlocks.comp.spv  ResetCommands.comp.spv  SumReduction.comp.spv  UpdateBitfield.comp.spv  UpdateNeighbours.comp.spv  ValidateCmds.comp.spv
