cmake_minimum_required(VERSION 3.10)

project(testApp VERSION 1.0)

# C++ source

set(CMAKE_CXX_COMPILER clang++)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_BUILD_TYPE debug)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

file(GLOB SOURCES "*.cpp")

add_executable(testApp ${SOURCES})

target_include_directories(testApp PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(testApp PRIVATE "$ENV{VULKAN_SDK}/include")
target_include_directories(testApp PRIVATE "/home/trw/Documents/Libraries/glm")
target_include_directories(testApp PRIVATE "/home/trw/Documents/Libraries/glfw/include/GLFW")

target_link_directories(testApp PRIVATE "$ENV{VULKAN_SDK}/lib")
target_link_libraries(testApp PRIVATE vulkan)

target_link_directories(testApp PRIVATE "/home/trw/Documents/Libraries/glfw/build/src")
target_link_libraries(testApp PRIVATE glfw3)

# Shaders

# 1. Define the directories
set(SHADER_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Shaders")
set(SHADER_BIN_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Shaders/Compiled")

# 3. Collect all .comp files in the source directory
file(GLOB_RECURSE SHADER_FILES
  "${SHADER_SRC_DIR}/*.comp"
  "${SHADER_SRC_DIR}/*.vert"
  "${SHADER_SRC_DIR}/*.frag"
)

set(SPV_OUTPUT_FILES "")

# 4. Loop through each file and create a compilation rule
foreach(SHADER_PATH ${SHADER_FILES})
    # Get the filename without the path (e.g., PlanetDisplacement.comp)
    get_filename_component(SHADER_NAME ${SHADER_PATH} NAME)

    # Define the output path (e.g., Shaders/Compiled/Cbt/PlanetDisplacement.comp.spv)
    set(OUTPUT_PATH "${SHADER_BIN_DIR}/${SHADER_NAME}.spv")
    set(DEP_FILE "${OUTPUT_PATH}.d") # The dependency list file

    add_custom_command(
      OUTPUT ${OUTPUT_PATH}
      # The --depfile flag tells the validator to write out a list of #includes
      COMMAND glslangValidator -g --target-env vulkan1.4 -V ${SHADER_PATH} -o ${OUTPUT_PATH} --depfile ${DEP_FILE}
      DEPENDS ${SHADER_PATH}
      # This tells CMake to read the .d file generated by the validator
      DEPFILE ${DEP_FILE}
      COMMENT "Compiling Shader with auto-deps: ${SHADER_NAME}"
      VERBATIM
    )

    # Add this specific output to our master list
    list(APPEND SPV_OUTPUT_FILES ${OUTPUT_PATH})
endforeach()

# 5. Create a single target that tracks all these files
add_custom_target(CompileShaders ALL DEPENDS ${SPV_OUTPUT_FILES})
